Copied Example 2 to Exercise

--- a/Example 1 (multiview)/index_Step01_data_manipulation.html
+++ b/Example 1 (multiview)/index_Step01_data_manipulation.html
@@ -30,6 +30,7 @@
                 return dict[d["NAME"]]["death_ratio"].push(+d[b_col]);
             })
         })
+        console.log(dict);
     }
 
 
